devj-playground/envs/u165622/case-02-namespace-to-namespace/source-namespace/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: net-pol-to-target-namespace
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchExpressions:
              - key: "kubernetes.io/metadata.name"
                operator: In
                # Erlaube den Ausgang zum namespace target ('target-namespace' ist ein Platzhalter)
                values: ["target-namespace"]
